Changes equality tests to ensure that there is no doubt...

--- a/test/ci/install
+++ b/test/ci/install
@@ -1,15 +1,15 @@
 #!/usr/bin/env bash
 
-if [ "$DB" = "postgis" ]; then
+if [ "$DB" -eq "postgis" ]; then
 
-    if [ "$POSTGIS" = "2.0" ]; then
+    if [ "$POSTGIS" -eq "2.0" ]; then
 	echo "yes" | sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
     fi
     
     sudo apt-get update
     sudo apt-get install -qq libgeos-dev libproj-dev postgresql-9.1-postgis
     
-    if [ "$POSTGIS" = "2.0" ]; then
+    if [ "$POSTGIS" -eq "2.0" ]; then
 	sudo apt-get install -qq libgeos++-dev
     fi
 fi
