--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1049,10 +1049,7 @@ jpn:
     company:
       # cant_find_document_template: "Can not find document template"
       default:
-        cash:
-          name:
-            # bank_account: "Bank account"
-            # cash_box: "Cash"
+        cash: #?
         # category: "By default"
         delays:
           expression:
@@ -1079,13 +1076,7 @@ jpn:
             # name: "Check"
           transfer:
             # name: "Transfer"
-        journals:
-          # bank: "Bank"
-          # cash: "Cash"
-          # forward: "Carried-forward"
-          # purchases: "Purchases"
-          # sales: "Sales"
-          # various: "Various operations"
+        journals: #?
         outgoing_payment_modes:
           cash:
             # name: "Cash"
