--- a/README.rdoc
+++ b/README.rdoc
@@ -1,14 +1,26 @@
-= Ekylibre
+{<img src="https://www.ekylibre.org/site/local/cache-vignettes/L400xH115/siteon0-9a58d.png"/>}[http://www.ekylibre.org]
 
 Ekylibre is a simple enterprise management web application written with Ruby on Rails framework.
-
 More details can be found at in the doc directory or on the official website http://www.ekylibre.org
+
+== Maps
+
+http://www.mindmeister.com/fr/233765234/ekylibre-1-0-2013
+
+== Forum
+
+https://www.ekylibre.org/forum/
+
+== Guides
+
+You can learn how to contribute in Ekylibre by following our official guide
+https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre
 
 == Contributing
 
 We encourage you to contribute to Ekylibre.
-You can learn how to contribute in Ekylibre by following our official guide https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre
 
+* See our conventions (FR) https://github.com/ekylibre/ekylibre/wiki/Conventions-de-d%C3%A9veloppement
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
 * Fork the project
@@ -17,7 +29,7 @@ You can learn how to contribute in Ekylibre by following our official guide http
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
-== Build Status {<img src="https://secure.travis-ci.org/ekylibre/ekylibre.png?branch=master"/>}[http://travis-ci.org/ekylibre/ekylibre]
+== Build Status {<img src="https://api.travis-ci.org/ekylibre/ekylibre.png?branch=master"/>}[https://travis-ci.org/ekylibre/ekylibre]
 
 == Dependency Status {<img src="https://gemnasium.com/ekylibre/ekylibre.png"/>}[https://gemnasium.com/ekylibre/ekylibre]
 
